--- a/app/config/config.yaml
+++ b/app/config/config.yaml
@@ -4,5 +4,31 @@ data:
   processed_data: "data/processed_data.json"
   vectorizer: "data/vectorizer.pkl"
 
-
+test_size: 0.2
+random_state: 42
 log_level: "INFO"
+
+sentence_transformer_model: "all-MiniLM-L6-v2"
+feature_type: "numeric_feature" # "numeric_feature" or "embedding_feature"
+
+
+model_configs:
+  xgb:
+    model_path: "mlmodels/xgb_model.json"
+    model_name: "xgb"
+    model_type: "xgboost"
+    report_path: "mlreports"
+    fixed_params:
+      eval_metric: "logloss"
+      standard_scaler: true
+      apply_imbalance: false
+    search_params:
+      n_estimators: [100, 200, 300]
+      learning_rate: [0.01, 0.05, 0.1]
+      max_depth: [3, 5, 10]
+      min_child_weight: [1, 3, 5]
+      gamma: [0, 0.1, 0.5]
+      subsample: [0.5, 0.7, 1]
+      colsample_bytree: [0.5, 0.7, 1]
+      reg_alpha: [0, 0.1, 0.5]
+      reg_lambda: [0, 0.1, 0.5]
