--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,48 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "anyio>=4.9.0",
     "fastapi[standard]>=0.115.12",
     "ipywidgets>=8.1.5",
     "jupyterlab>=4.3.6",
     "matplotlib>=3.10.1",
+    "mypy",
+    "mypy-extensions",
     "polars>=1.26.0",
     "pre-commit>=4.2.0",
+    "pytest-asyncio>=0.26.0",
+    "pytest-cov>=6.0.0",
+    "pytest-html>=4.1.1",
+    "pytest-tornasync>=0.6.0.post2",
+    "pytest>=8.3.5",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
     "scikit-learn>=1.6.1",
     "seaborn>=0.13.2",
     "sentence-transformers>=4.0.1",
     "shap>=0.47.1",
+    "types-pyyaml>=6.0.12.20250326",
     "uvicorn>=0.34.0",
     "xgboost>=3.0.0",
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+testpaths = ["tests"]
+python_files = "test_*.py"
+asyncio_mode = "auto"
+addopts = """
+    --html=reports/report.html
+    --self-contained-html
+    --cov=app
+    --cov-report=html:reports/coverage_html
+    --cov-report=term-missing
+"""
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.23.5",
+    "pytest-cov>=4.1.0",
+    "httpx>=0.27.0",
 ]
