--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "matplotlib>=3.10.1",
     "mypy",
     "mypy-extensions",
+    "optuna>=4.2.1",
     "polars>=1.26.0",
     "pre-commit>=4.2.0",
     "pytest-asyncio>=0.26.0",
