--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "optuna>=4.2.1",
     "polars>=1.26.0",
     "pre-commit>=4.2.0",
+    "pyarrow>=19.0.1",
     "pytest-asyncio>=0.26.0",
     "pytest-cov>=6.0.0",
     "pytest-html>=4.1.1",
@@ -27,6 +28,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "sentence-transformers>=4.0.1",
     "shap>=0.47.1",
+    "spacy>=3.8.5",
     "types-pyyaml>=6.0.12.20250326",
     "uvicorn>=0.34.0",
     "xgboost>=3.0.0",
