--- a/app/config/config.yaml
+++ b/app/config/config.yaml
@@ -1,5 +1,5 @@
 data:
-  processed_data: data/processed_data.json
+  processed_data: data/new_training_data.json
   reference_data: data/referance_rooms-1737378184366.csv
   supplier_data: data/updated_core_rooms.csv
   vectorizer: data/vectorizer.pkl
